2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ThumbTest.cs: Added Focusable test.