@@ -10,6 +10,7 @@ namespace System.Windows.Controls.Primitives {
 #endif
 	[TestFixture]
 	public class RangeBaseTest {
+		#region InvalidMinimmum
 		[Test]
 		[ExpectedException(typeof(ArgumentException))]
 		public void InvalidMinimmum() {
@@ -20,5 +21,25 @@ namespace System.Windows.Controls.Primitives {
 				Minimum = double.NegativeInfinity;
 			}
 		}
-    }
+		#endregion
+
+		#region ValueOutOfRange
+		[Test]
+		public void ValueOutOfRange() {
+			new ValueOutOfRangeRangeBase();
+		}
+		class ValueOutOfRangeRangeBase : RangeBase {
+			public ValueOutOfRangeRangeBase() {
+				Value = Maximum + 1;
+				Assert.AreEqual(Value, Maximum, "Value");
+				Assert.AreEqual(call_count, 1, "OnValueChanged calls");
+			}
+			int call_count;
+			protected override void OnValueChanged(double oldValue, double newValue) {
+				base.OnValueChanged(oldValue, newValue);
+				call_count++;
+			}
+		}
+		#endregion
+	}
 }
