@@ -1,3 +1,7 @@
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* RangeBaseTest.cs: Added ValueOutOfRange test.
+	
+2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* ThumbTest.cs: Added Focusable test.
